# zotify

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  deleteSongIdFiles.py  example.md  pyproject.toml  renovate.json  usageExample.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml
zotify/: __main__.py  api.py  app.py  config.py  const.py  termoutput.py  track.py  utils.py
